# PokeRNCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO  docker-compose.yml
.cargo/: config.toml
RNCP/: google_doc.txt  url_tunnel.txt
backend/: .env.example  Cargo.toml
backend/data/: test.sql
backend/docs/: MIGRATIONS.md
backend/migrations/: 20251015192019_init_schema.down.sql  20251015192019_init_schema.up.sql  20251019141600_init.down.sql  20251019141600_init.up.sql  20251029123000_add_pokemon_image_and_number.down.sql  20251029123000_add_pokemon_image_and_number.up.sql  20251029124000_add_pokemon_measurements_and_weaknesses.down.sql  20251029124000_add_pokemon_measurements_and_weaknesses.up.sql  20251029190000_update_pokemon_drop_weaknesses_add_description.down.sql  20251029190000_update_pokemon_drop_weaknesses_add_description.up.sql
backend/src/: app.rs  auth.rs  db.rs  helpers.rs  lib.rs  main.rs
backend/src/handlers/: auth.rs  mod.rs  pokemon.rs  user.rs
backend/src/models/: auth.rs  pokemon.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  pokemon.rs  user.rs
backend/tests/: auth.rs  common.rs  db_test.rs  health_test.rs  pokemon.rs  user.rs
frontend/: Cargo.toml  index.html  trunk.toml
frontend/src/: main.rs
frontend/src/components/: layout.rs  login_form.rs  mod.rs  pokedex.rs  profile.rs  signup_form.rs
frontend/styles/: layout.css  pokedex.css  profile.css  styles.css
