[package]
name = "pokedex_rncp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["tokio", "http1"] }
tokio = { version = "1.40", features = ["full"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "macros", "migrate", "time"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.0", features = ["v4", "serde"] }

# les dates
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }

# hash mdp 
argon2 = "0.5.3" # https://crates.io/crates/argon2

dotenvy = "0.15.7"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

# CORS
tower-http = { version = "0.6", features = ["cors"] }

tower = { version = "0.4", features = ["make", "util"] }  

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
# Utilitaires Tower
tower = { version = "0.4", features = ["util"] }
# Outils body pour tests
http-body-util = "0.1.3"
# Singleton
once_cell = "1.21.3" # https://crates.io/crates/once_cell

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

hyper = "1"
serde_json = "1"
