[package]
name = "pokedex_rncp_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
## Serveur HTTP (Axum) et runtime async (Tokio)
axum = { version = "0.8.6", features = ["tokio", "http1"] }
tokio = { version = "1.40", features = ["full"] }

## SQLx (PostgreSQL) sans OpenSSL (rustls), avec types uuid/time et migrations
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate", "time"] }

## Sérialisation JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

## Identifiants uniques
uuid = { version = "1.0", features = ["v4", "serde"] }

## Dates/horodatages
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }

## Hash des mots de passe (Argon2)
argon2 = "0.5.3" # https://crates.io/crates/argon2

## Chargement des variables d'environnement en dev
dotenvy = "0.15.7"
## JSON Web Tokens (accès/refresh/reset)
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }

## HTTP utils (CORS)
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["full"] }
## Utilitaires Tower pour tests
tower = { version = "0.4", features = ["util"] }

## Singleton (OnceCell) pour partager des ressources (ex: pool) en tests
once_cell = "1.21.3" # https://crates.io/crates/once_cell

## Client HTTP des tests
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

